<resources>
    <string name="app_name">Coffee Menu</string>
    <string name="action_settings">Settings</string>

    <string name="drinkTypeString">Drink Type:</string>
    <string name="sizeString">Size:</string>
    <string name="smallSizeString">Small</string>
    <string name="mediumSizeString">Medium</string>
    <string name="largeSizeString">Large</string>
    <string name="icedString">Iced:</string>
    <string name="yesString">Yes</string>
    <string name="noString">No</string>
    <string name="milkString">Milk:</string>
    <string name="noneString">None</string>
    <string name="normalString">Whole</string>
    <string name="soyString">Skim</string>
    <string name="brewString">Brew Type:</string>
    <string name="descriptionString">Brew Description:</string>
    <string name="loadString">Load Favorite</string>
    <string name="saveString">Save Favorite</string>
    <string name="orderString">Order</string>
    <string name="clearString">Clear</string>
    <string name="summaryString">Order Summary</string>
    <string name="confirmString">Confirm</string>
    <string name="cancelString">Cancel</string>
    <string name="sweetString">Sweetener:</string>
</resources>
